--- a/Words Virtuoso/Colors/task-info.yaml
+++ b/Words Virtuoso/Colors/task-info.yaml
@@ -447,5 +447,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/22750#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Tue, 31 Jan 2023 15:23:00 UTC
 record: -1
